# OSS_Platform

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile_service  Docs.md  Jenkinsfile  Jenkinsfile_old  README.md  clean_pycache.sh  docker_build.sh  docker_run.sh  install.sh  install_submodules.sh  mkdocs.yml  pyproject.toml
DynReActBase/: Dockerfile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
DynReActBase/docs/: cost_provider.md  index.md  longtermplanning.md  lot_sink.md  lots_optimizer.md  model.md  plant_performance_model.md  prod_history_reader.md  shifts_provider.md  snapshot_importer.md  snapshot_provider.md
DynReActBase/dynreact/base/: AggregationProvider.py  ConfigurationProvider.py  CostProvider.py  DowntimeProvider.py  EnergyService.py  InterruptedException.py  LongTermPlanning.py  LotSink.py  LotsOptimizer.py  NotApplicableException.py  PermissionManager.py  PlantAvailabilityPersistence.py  PlantPerformanceModel.py  ProductionHistoryReader.py  ResultsPersistence.py  ShiftsProvider.py  ShortTermPlanning.py  SnapshotImporter.py  SnapshotProvider.py  TemporaryRestrictionsProvider.py  conditions.py  model.py  monitoring.py
DynReActBase/dynreact/base/impl/: AggregationPersistence.py  AggregationPersistenceImpl.py  AggregationProviderImpl.py  DatetimeUtils.py  DummyHistoryReader.py  DummyShiftsProvider.py  EnergyServiceClient.py  FileAggregationPersistence.py  FileAvailabilityPersistence.py  FileBasedTemporaryRestrictionsProvider.py  FileConfigProvider.py  FileDowntimeProvider.py  FileLotSink.py  FileResultsPersistence.py  FileSnapshotProvider.py  MaterialAggregation.py  MemoryResultsPersistence.py  ModelUtils.py  PathUtils.py  PerformanceModelClient.py  Scenarios.py  SimpleCostProvider.py  SimpleEnergyService.py  SimpleLongTermPlanning.py  StaticConfigurationProvider.py  StaticSnapshotProvider.py  TestPerformanceModel.py
DynReActService/: .env  .env.oss  .env_RAS  .gitignore  PROFILE_ARCHITECTURE.md  README.md  aggregate_production.py  analyze_lots.py  analyze_site.py  analyze_snapshot.py  auth_test.py  create_lots.py  eligible_orders.py  energy_prediction.py  energy_services.py  evaluate_lot.py  evaluate_split_orders.py  lot_sinks.py  mtp_benchmark.py  mtp_scenario.py  planned_processing_time.py  planning_horizon.py  pyproject.toml  read_history.py  requirements-dev.txt  requirements.txt  requirements_local.txt  run.py  run_ltp.py  run_mtp.py  show_gantt.py  show_material.py  show_order_history.py  show_orders.py  show_shifts.py  show_snapshots.py  transfer_lot.py  transition_costs.py
DynReActService/data/: energy_context.json  site.json  stp_context.json  transport_times.csv
DynReActService/data/snapshots/: snapshot_2024-12-31T00_00.csv
DynReActService/dynreact/: AggregateResultsPersistence.py  SnapshotUpdate.py  app.py  app_config.py  batch.py  cli.py  container.py  lots_optimization.py  module_loader.py  plugins.py  state.py
DynReActService/dynreact/auth/: authentication.py  dummy_auth.py  ldap_auth.py  ldap_auth_simple.py
DynReActService/dynreact/cost/: __init__.py  oss.py
DynReActService/dynreact/gui/: dash_app.py  gui_utils.py  localization.py  perf_energy.py  snapshot_rows.py
DynReActService/dynreact/gui/pages/: agentsPage.py  coil_order_allocation.py  components.py  energy2.py  equipment_performance.py  login.py  logout.py  long_term_planning.py  lot_backlog.py  lot_batch.py  lot_creation2.py  lot_gantt.py  lot_planning.py  ltp_results.py  material_order_allocation.py  optimization_listener.py  perf_energy_page.py  perf_models.py  plants_graph.py  session_state.py  site.py  snapshotPage.py  snapshot_imports_page.py  stp_page.py  temporary_restrictions.py  timeseries_plots.py
DynReActService/dynreact/gui/plugins/: agentsPage.py
DynReActService/dynreact/service/: model.py  optim_listener.py  service.py
DynReActService/tests/integrationtests/: ServiceTest.py  TestSetup.py  test_batch_mtp.py  test_perf_energy.py  test_profile_loader.py  test_service.py
LongTermPlanning/: pyproject.toml  requirements.txt  run_ltp_scenario.py
LongTermPlanning/dynreact/ltp/: LongTermPlanningImpl.py  LtpException.py  LtpInstance.py  LtpUtils.py  ResultSerialization.py  ShiftAllocator.py
LongTermPlanning/tests/: test_ltp.py  test_shift_allocation.py
MidTermPlanning/: README.md  pyproject.toml  requirements.txt
MidTermPlanning/dynreact/lotcreation/: LotCreationGoogleOR.py  LotsOptimizerImpl.py  TabuParams.py  Tsp2Opt.py  global_tsp_bf.py
MidTermPlanning/dynreact/lotcreation/globaltsp/: BranchAndBoundWithEnsembleInput.py  BranchAndBoundWithEnsembleInput2.py  CombinedSolver.py  GlobalSearchBranchBound.py  GlobalTspSolver.py  GoogleOrSolver.py  (+2 more)
MidTermPlanning/tests/unittests/: OptimizationTest.py  test_eligible_orders.py  test_optimization.py  test_temporary_restrictions.py  test_tsp_global.py
SampleUseCase/: README.md  pyproject.toml  requirements.txt
SampleUseCase/dynreact/cost/: CostCalculatorImpl.py  CostConfig.py
SampleUseCase/dynreact/sample/: model.py
ShortTermPlanning/: .Dockerfile.swp  Dockerfile  Jenkinsfile  README.md  ReadMe.md  ReadMe2.md  jenkinsfile  mkdocs.yml  pyproject.toml  requirements.txt  test.py
ShortTermPlanning/data/: stp_context.json
ShortTermPlanning/docs/: agent.md  cleankafka.md  common.md  equipment.md  functions.md  index.md  log.md  material.md  shorttermplanning.md
ShortTermPlanning/dynreact/auction/: __init__.py  auction.py
ShortTermPlanning/dynreact/gui_stp/: agentsPage.py  agents_state.py
ShortTermPlanning/dynreact/shortterm/: ShortTermPlanning.py  __init__.py  agent.py  clean_kafka.py  common.py  config.cnf  equipment.py  functions.py  log.py  material.py  replace_base.py  short_term_planning.py  shorttermtargets.py  timedelay.py
ShortTermPlanning/extras/: entrypoint.sh
ShortTermPlanning/tests/: __init__.py  stp_context_oss_test.json
ShortTermPlanning/tests/integration_test/: __init__.py  test_auction.py  test_exit_cleanup.py
ShortTermPlanning/tests/unit_tests/: __init__.py  conftest.py  test_auction_model.py  test_common.py  test_material.py  test_replace_base.py
(+131 files in other folders)
