[project]
name = "workspace"
version = "0.1.0"
description = ""
authors = [
    {name = "Hector Flores",email = "frhectorin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "poetry-core (>=1.0.0)",
    "base (>=0.0.0,<0.0.1)",
    "app-config (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
