[project]
name = "oss-platform"
version = "0.1.0"
description = "Descripción de OSS Platform"
authors = [
    {name = "DynReAct Team", email = "info@dynreact.de"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
packages = {find = {}}

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
