[tool.poetry]
name = "dynreact-base"
version = "0.0.1" # Found in requirements_build.txt for other projects [cite: 11, 16]
description = "DynReAct Base" # Replace with actual description
authors = ["Your Name <you@example.com>"] # Replace with actual author
readme = "README.md" # Adjust if README file is different

packages = [
    { include = "dynreact", from = "." }
]

[tool.poetry.dependencies]
python = "^3.9" # Adjust Python version as needed
pandas = ">=2,<3" 
pydantic = ">=2.7,<3" 
python-dotenv = ">=1,<2" 
requests = ">=2.32.3,<3" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
