[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dynreact_base"
version = "0.0.1"
description = "The DynReAct base package"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
packages = [
    { include = "dynreact/base"},
    { include = "dynreact/base/impl" },
]

[tool.poetry.urls]
Homepage = "https://github.com/DynReAct/OSS_Platform"
Issues = "https://github.com/DynReAct/OSS_Platform/issues"

[tool.poetry.dependencies]
python = ">=3.12"
pandas = ">=2,<3"
pydantic = ">=2.7,<3"
python-dotenv = ">=1,<2"
requests = ">=2.32.3,<3"
urllib3 = ">1.26.0,<3"

# Dependent local modules
dynreact-shortterm = { path = "../ShortTermPlanning", develop = true }
