[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dynreact_service"
version = "0.0.1"
#authors = [
#  { name="Example Author", email="author@example.com" },
#]
description = "The DynReAct service and GUI"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/DynReAct/OSS_Platform"
Issues = "https://github.com/DynReAct/OSS_Platform/issues"

[project.scripts]
aggregate-production = "dynreact.cli:aggregate_production"
analyze-lots = "dynreact.cli:analyze_lots"
analyze-site = "dynreact.cli:analyze_site"
analyze-snapshot = "dynreact.cli:analyze_snapshot"
auth-test = "dynreact.cli:auth_test"
create-lots = "dynreact.cli:create_lots"
evaluate-lot = "dynreact.cli:evaluate_lot"
mtp-benchmark = "dynreact.cli:mtp_benchmark"
mtp-scenario = "dynreact.cli:mtp_scenario"
lot-sinks = "dynreact.cli:lot_sinks"
run-ltp = "dynreact.cli:run-ltp"
show-material = "dynreact.cli:show_material"
show-orders = "dynreact.cli:show_orders"
show-shifts = "dynreact.cli:show_shifts"
transition-costs = "dynreact.cli:transition_costs"
transfer-lot = "dynreact.cli:transfer_lot"

# See https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#setuptools-specific-configuration
[tool.setuptools]
packages = ["dynreact", "dynreact.auth", "dynreact.service", "dynreact.gui", "dynreact.gui.pages"]
# JOM addin 20241101 # TODO
#packages = ["dynreact", "dynreact.auth", "dynreact.service", "dynreact.gui", "dynreact.gui.pages", "dynreact.gui.pages.auction"]
package-dir = {"" = "."}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = { file = ["requirements-dev.txt"]}

