[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dynreact_ltp2"
version = "0.0.1"
#authors = [
#  { name="Example Author", email="author@example.com" },
#]
description = "The DynReAct Long Term Planning2 package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

#[project.urls]
#Homepage = "https://github.com/DynReAct/LongTermPlanning"
#Issues = "https://github.com/DynReAct/LongTermPlanning/issues"

# See https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#setuptools-specific-configuration
[tool.setuptools]
packages = ["dynreact.ltp"]
package-dir = {"" = "."}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
