[tool.poetry]
name = "dynreact-midtermplanning" # Assuming package name from folder
version = "0.1.0" # Replace with actual version
description = "MidTermPlanning" # Replace with actual description
authors = ["Your Name <you@example.com>"] # Replace with actual author
readme = "README.md" # Adjust if README file is different

packages = [
    { include = "dynreact", from = "." }
]

[tool.poetry.dependencies]
python = "^3.9" # Adjust Python version as needed
networkx = ">=3.4.1,<4" 
numpy = ">=2.1.2,<3" 
#openpyxl = ">=3.1.2,<4" # Commented out as in requirements.txt 
ortools = ">=9.11.4210,<10" 
pandas = ">=2.2.3,<3" 
pydantic = ">=2.7,<3" 
python-dotenv = ">=1,<2" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
