[tool.poetry]
name = "dynreact-sampleusecase" # Assuming package name from folder
version = "0.1.0" # Replace with actual version
description = "SampleUseCase" # Replace with actual description
authors = ["Your Name <you@example.com>"] # Replace with actual author
readme = "README.md" # Adjust if README file is different

packages = [
    { include = "dynreact", from = "." }
]

[tool.poetry.dependencies]
python = "^3.9" # Adjust Python version as needed
python-dotenv = ">=1.0.0,<2.0" 
pandas = ">=2,<3" 
numpy = ">=1.24,<3" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
