[tool.poetry]
name = "dynreact-shortterm" # Assuming package name from folder
version = "0.1.0" # Replace with actual version
description = "ShortTermPlanning" # Replace with actual description
authors = ["Your Name <you@example.com>"] # Replace with actual author
readme = "README.md" # Adjust if README file is different

packages = [
    { include = "dynreact", from = "." } 
]

[tool.poetry.dependencies]
python = "^3.9" # Adjust Python version as needed
argparse = ">=1.3.0,<2" 
common = ">=0.1.2,<1" 
confluent-kafka = ">=2.6.0,<3" 
dash = ">=2.18.1,<3" 
dash-core-components = ">=2.0.0,<3" 
dash-html-components = ">=2.0.0,<3" 
dash-table = ">=5.0.0,<6" 
docutils = ">=0.20.1,<1" 
Flask = ">=3.0.3,<4" 
Jinja2 = ">=3.1.2,<4" 
jsonpatch = ">=1.32,<2" 
jsonpointer = ">=2.0,<3" 
jsonschema = ">=4.10.3,<5" 
nest-asyncio = ">=1.6.0,<2" 
numpy = ">=1.24,<3" 
pandas = ">=2.2.3,<3" 
requests = ">=2.32.3,<3" 
simplejson = ">=3.19.2,<4" 
Sphinx = ">=7.2.6,<8" 
sphinx-rtd-theme = ">=3.0.1,<4" 
sphinxcontrib-jquery = ">=4.1,<5" 
toml = ">=0.10.2,<1" 
tzdata = ">=2024.2,<2025.11" 
Unidecode = ">=1.3.8,<2" 
urllib3 = ">=2.0.7,<3" 
wheel = ">=0.42.0,<1" 
docker = ">=7.1,<8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
