[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dynreact-shortterm"
version = "0.1.0"
description = "The DynReAct ShortTerm scheduling package"
authors = ["Hector Flores <hc.flores@alumnos.upm.es>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
packages = [
    { include = "dynreact/shortterm" },
    { include = "dynreact/auction" }
]

[tool.poetry.urls]
Homepage = "https://github.com/DynReAct/OSS_Platform"
Issues = "https://github.com/DynReAct/OSS_Platform/issues"


[tool.poetry.dependencies]
python = ">=3.12"
wheel = ">=0.42.0,<1"
docker = ">=7.1.0"
toml = ">=0.10.2,<1"
argparse = ">=1.3.0,<2"
requests = ">=2.32.4,<3"
confluent-kafka = ">=2.9.0,<3.0"
pydantic = ">=2.10.6,<2.11.0"
tzdata = ">=2024.2,<2025.11"
flatdict = "4.0.1"
urllib3 = ">1.26.0,<3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-mock = "^3.14"
coverage = "^7.6"
psutil = "^7.0"
testfixtures = "^8.3"
