[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynreact-shortterm"
version = "0.1.0"
description = "The DynReAct ShortTerm scheduling package"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["dynreact.shortterm", "dynreact.auction", "dynreact.gui_stp"]
package-dir = {"" = "."}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
